finished movies + shows page

--- a/movies_and_games.html
+++ b/movies_and_games.html
@@ -19,178 +19,196 @@
       </div>
     </nav>
 </header>
+
 <main id="moviesandshows">
   <p id="m_intro">
       This page lets you explore both movies and shows with clear and simple content
       information. Each card includes a short summary, content ratings, and helpful indicators
       so you always know what to expect before pressing play.
   </p>
+
   <div id="searchbar">
       <input type="text" placeholder="Search movies/shows...">
   </div>
+
+  <!-- MOVIES SECTION -->
   <section id="movies">
     <h1>Movies</h1>
-    <div class="poster_and_details" id="first_movie">
-      <h2>Sample Movie Title</h2>
-      <img src="images/minecraft.jpg" alt="Sample Movie Poster">
-      <details class="details">
-          <summary>View Details</summary>
-          <p>“This is a quick description of the movie or show. It explains the basic idea without
-              spoilers and helps viewers understand the tone.”</p>
-          <ul class="content-ratings">
-              <li>Language: Mild</li>
-              <li>Violence: Moderate</li>
-              <li>Scary Moments: None</li>
-              <li>Themes: Family, Adventure</li>
-          </ul>
-      </details>
-    </div>
-    <div class="poster_and_details" id="movie2">
-      <h2>Sample Movie Title</h2>
-      <img src="images/minecraft.jpg" alt="Sample Movie Poster">
-      <details class="details">
-          <summary>View Details</summary>
-          <p>“This is a quick description of the movie or show. It explains the basic idea without
-              spoilers and helps viewers understand the tone.”</p>
-          <ul class="content-ratings">
-              <li>Language: Mild</li>
-              <li>Violence: Moderate</li>
-              <li>Scary Moments: None</li>
-              <li>Themes: Family, Adventure</li>
-          </ul>
-      </details>
-    </div>
-    <div class="poster_and_details" id="movie3">
-      <h2>Sample Movie Title</h2>
-      <img src="images/minecraft.jpg" alt="Sample Movie Poster">
-      <details class="details">
-          <summary>View Details</summary>
-          <p>“This is a quick description of the movie or show. It explains the basic idea without
-              spoilers and helps viewers understand the tone.”</p>
-          <ul class="content-ratings">
-              <li>Language: Mild</li>
-              <li>Violence: Moderate</li>
-              <li>Scary Moments: None</li>
-              <li>Themes: Family, Adventure</li>
-          </ul>
-      </details>
-    </div>
+
+    <!-- LOTR -->
     <div class="poster_and_details">
-      <h2>Sample Movie Title</h2>
-      <img src="images/minecraft.jpg" alt="Sample Movie Poster">
+      <img src="images/lotr.webp" alt="LOTR Poster">
+      <h2>The Lord of the Rings: The Fellowship of the Ring</h2>
       <details class="details">
           <summary>View Details</summary>
-          <p>“This is a quick description of the movie or show. It explains the basic idea without
-              spoilers and helps viewers understand the tone.”</p>
+          <p>An unlikely hero joins a dangerous quest to destroy a powerful ring, blending epic fantasy adventure, heartfelt friendships, and rising darkness.</p>
           <ul class="content-ratings">
-              <li>Language: Mild</li>
-              <li>Violence: Moderate</li>
-              <li>Scary Moments: None</li>
-              <li>Themes: Family, Adventure</li>
+              <li>Violence: Medium</li>
+              <li>Language: Low</li>
+              <li>Scary Moments: Medium</li>
+              <li>Themes: Heavy</li>
           </ul>
       </details>
     </div>
+
+    <!-- Spider-Man No Way Home -->
     <div class="poster_and_details">
-      <h2>Sample Movie Title</h2>
-      <img src="images/minecraft.jpg" alt="Sample Movie Poster">
+      <img src="images/spiderman.png" alt="Spider-Man Poster">
+      <h2>Spider-Man: No Way Home</h2>
       <details class="details">
           <summary>View Details</summary>
-          <p>“This is a quick description of the movie or show. It explains the basic idea without
-              spoilers and helps viewers understand the tone.”</p>
+          <p>Peter Parker faces multiverse chaos when past villains return, mixing emotional moments, high-energy action, and themes of responsibility.</p>
           <ul class="content-ratings">
-              <li>Language: Mild</li>
-              <li>Violence: Moderate</li>
-              <li>Scary Moments: None</li>
-              <li>Themes: Family, Adventure</li>
+              <li>Violence: Medium</li>
+              <li>Language: Medium</li>
+              <li>Scary Moments: Low</li>
+              <li>Themes: Moderate</li>
+          </ul>
+      </details>
+    </div>
+
+    <!-- Knives Out -->
+    <div class="poster_and_details">
+      <img src="images/knives out.webp" alt="Knives Out Poster">
+      <h2>Knives Out</h2>
+      <details class="details">
+          <summary>View Details</summary>
+          <p>A witty detective investigates a wealthy family’s mystery, blending humor, tension, and clever twists without revealing the crime’s full truth.</p>
+          <ul class="content-ratings">
+              <li>Violence: Low</li>
+              <li>Language: Medium</li>
+              <li>Scary Moments: Low</li>
+              <li>Themes: Moderate</li>
+          </ul>
+      </details>
+    </div>
+
+    <!-- Star Wars A New Hope -->
+    <div class="poster_and_details">
+      <img src="images/star wars.webp" alt="Star Wars Poster">
+      <h2>Star Wars: A New Hope</h2>
+      <details class="details">
+          <summary>View Details</summary>
+          <p>A young hero joins a rebellion to stop a tyrannical empire, offering classic adventure, hopeful themes, and iconic galactic battles.</p>
+          <ul class="content-ratings">
+              <li>Violence: Medium</li>
+              <li>Language: Low</li>
+              <li>Scary Moments: Low</li>
+              <li>Themes: Light</li>
+          </ul>
+      </details>
+    </div>
+
+    <!-- Wreck-It Ralph -->
+    <div class="poster_and_details">
+      <img src="images/wralph.jpg" alt="Wreck-It Ralph Poster">
+      <h2>Wreck-It Ralph</h2>
+      <details class="details">
+          <summary>View Details</summary>
+          <p>A video-game villain seeks acceptance in other worlds, delivering colorful humor, heartfelt lessons, and imaginative arcade-style adventures.</p>
+          <ul class="content-ratings">
+              <li>Violence: Low</li>
+              <li>Language: Low</li>
+              <li>Scary Moments: Low</li>
+              <li>Themes: Light</li>
+          </ul>
+      </details>
+    </div>
+  </section>
+
+  <!-- SHOWS SECTION -->
+  <section id="shows">
+    <h1>Shows</h1>
+
+    <!-- Friends -->
+    <div class="poster_and_details">
+      <img src="images/friends.webp" alt="Friends Poster">
+      <h2>Friends</h2>
+      <details class="details">
+          <summary>View Details</summary>
+          <p>Six friends navigate life and relationships in New York, blending light comedy, heartwarming moments, and everyday personal challenges.</p>
+          <ul class="content-ratings">
+              <li>Violence: Low</li>
+              <li>Language: Medium</li>
+              <li>Scary Moments: Low</li>
+              <li>Themes: Light</li>
+          </ul>
+      </details>
+    </div>
+
+    <!-- Avatar: The Last Airbender -->
+    <div class="poster_and_details">
+      <img src="images/avatar.webp" alt="Avatar Poster">
+      <h2>Avatar: The Last Airbender</h2>
+      <details class="details">
+          <summary>View Details</summary>
+          <p>A young hero must master the elements to stop a war, mixing heartfelt storytelling, humor, and beautifully crafted fantasy adventure.</p>
+          <ul class="content-ratings">
+              <li>Violence: Medium</li>
+              <li>Language: Low</li>
+              <li>Scary Moments: Medium</li>
+              <li>Themes: Moderate</li>
+          </ul>
+      </details>
+    </div>
+
+    <!-- The Walking Dead -->
+    <div class="poster_and_details">
+      <img src="images/walking dead.webp" alt="Walking Dead Poster">
+      <h2>The Walking Dead</h2>
+      <details class="details">
+          <summary>View Details</summary>
+          <p>Survivors navigate a zombie-filled world, focusing on intense conflict, emotional struggles, and the fight to hold onto humanity.</p>
+          <ul class="content-ratings">
+              <li>Violence: High</li>
+              <li>Language: Medium</li>
+              <li>Scary Moments: High</li>
+              <li>Themes: Heavy</li>
+          </ul>
+      </details>
+    </div>
+
+    <!-- The Office -->
+    <div class="poster_and_details">
+      <img src="images/the office.avif" alt="The Office Poster">
+      <h2>The Office</h2>
+      <details class="details">
+          <summary>View Details</summary>
+          <p>A documentary-style look at office employees, mixing awkward humor, quirky personalities, and lighthearted workplace absurdity.</p>
+          <ul class="content-ratings">
+              <li>Violence: Low</li>
+              <li>Language: Medium</li>
+              <li>Scary Moments: Low</li>
+              <li>Themes: Light</li>
+          </ul>
+      </details>
+    </div>
+
+    <!-- Star Wars: The Clone Wars -->
+    <div class="poster_and_details">
+      <img src="images/clone wars.avif" alt="Clone Wars Poster">
+      <h2>Star Wars: The Clone Wars</h2>
+      <details class="details">
+          <summary>View Details</summary>
+          <p>Animated stories explore galactic battles, moral conflicts, and character growth during the Clone Wars with action-adventure storytelling.</p>
+          <ul class="content-ratings">
+              <li>Violence: Medium</li>
+              <li>Language: Low</li>
+              <li>Scary Moments: Medium</li>
+              <li>Themes: Moderate</li>
           </ul>
       </details>
     </div>
 
   </section>
-  <section id="shows">
-    <h1>Shows</h1>
-    <div class="poster_and_details">
-      <h2>Sample Movie Title</h2>
-      <img src="images/minecraft.jpg" alt="Sample Movie Poster">
-      <details class="details">
-          <summary>View Details</summary>
-          <p>“This is a quick description of the movie or show. It explains the basic idea without
-              spoilers and helps viewers understand the tone.”</p>
-          <ul class="content-ratings">
-              <li>Language: Mild</li>
-              <li>Violence: Moderate</li>
-              <li>Scary Moments: None</li>
-              <li>Themes: Family, Adventure</li>
-          </ul>
-      </details>
-    </div>
-    <div class="poster_and_details">
-      <h2>Sample Movie Title</h2>
-      <img src="images/minecraft.jpg" alt="Sample Movie Poster">
-      <details class="details">
-          <summary>View Details</summary>
-          <p>“This is a quick description of the movie or show. It explains the basic idea without
-              spoilers and helps viewers understand the tone.”</p>
-          <ul class="content-ratings">
-              <li>Language: Mild</li>
-              <li>Violence: Moderate</li>
-              <li>Scary Moments: None</li>
-              <li>Themes: Family, Adventure</li>
-          </ul>
-      </details>
-    </div>
-    <div class="poster_and_details">
-      <h2>Sample Movie Title</h2>
-      <img src="images/minecraft.jpg" alt="Sample Movie Poster">
-      <details class="details">
-          <summary>View Details</summary>
-          <p>“This is a quick description of the movie or show. It explains the basic idea without
-              spoilers and helps viewers understand the tone.”</p>
-          <ul class="content-ratings">
-              <li>Language: Mild</li>
-              <li>Violence: Moderate</li>
-              <li>Scary Moments: None</li>
-              <li>Themes: Family, Adventure</li>
-          </ul>
-      </details>
-    </div>
-    <div class="poster_and_details">
-      <h2>Sample Movie Title</h2>
-      <img src="images/minecraft.jpg" alt="Sample Movie Poster">
-      <details class="details">
-          <summary>View Details</summary>
-          <p>“This is a quick description of the movie or show. It explains the basic idea without
-              spoilers and helps viewers understand the tone.”</p>
-          <ul class="content-ratings">
-              <li>Language: Mild</li>
-              <li>Violence: Moderate</li>
-              <li>Scary Moments: None</li>
-              <li>Themes: Family, Adventure</li>
-          </ul>
-      </details>
-    </div>
-    <div class="poster_and_details">
-      <h2>Sample Movie Title</h2>
-      <img src="images/minecraft.jpg" alt="Sample Movie Poster">
-      <details class="details">
-          <summary>View Details</summary>
-          <p>“This is a quick description of the movie or show. It explains the basic idea without
-              spoilers and helps viewers understand the tone.”</p>
-          <ul class="content-ratings">
-              <li>Language: Mild</li>
-              <li>Violence: Moderate</li>
-              <li>Scary Moments: None</li>
-              <li>Themes: Family, Adventure</li>
-          </ul>
-      </details>
-    </div>
-  </section>
 </main>
+
 <footer>
-        <a href="###">Contact</a>
-        <a href="###">About</a>
-        <a href="###">Social Media</a>
-        <a href="###">Copyright</a>
-    </footer>
+    <a href="###">Contact</a>
+    <a href="###">About</a>
+    <a href="###">Social Media</a>
+    <a href="###">Copyright</a>
+</footer>
+
 </body>
 </html>
